--- a/formularz-colorissimo/css/style.css
+++ b/formularz-colorissimo/css/style.css
@@ -23,15 +23,20 @@ h2 {
     margin: 0 auto;
     align-items: center;
     justify-content: center; 
+    
 }
 
 #logandreg, #remind {
     background-color: #fff;
     margin: 30px 0;
+    border-radius: 5px;
+-webkit-box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.07);
+-moz-box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.07);
+box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.07);
 }
 
 #colorissimo-logo {
-   height: 70px;
+   height: 80px;
    margin: 0 auto;
    display: block;
     
@@ -69,6 +74,15 @@ form {
    
 }
 
+/*
+#check1:checked,
+#check2:checked,
+#check3:checked {
+    background-color: #509af5;
+    
+}
+*/
+
 #check1 label,
 #check2 label,
 #check3 label {
@@ -79,35 +93,87 @@ input[type=checkbox] {
     margin-right: 15px;
 }
 
+
 #btn-reg,
 #btn-log {
     background-color: #3d5383;
     color: #fff;
     margin: 0px auto;
     display: block;
+    border-radius: 0px;
+    font-size: 16px;
 }
 
 #btn-reg {
     margin-top: 15px;
 }
 
-a {
-    text-align: center;
-    display: block;
+#link-remind {
+    font-size: 12px;
+    color: #457db9;
     margin: 15px 0;
-    text-decoration: none;
 }
 
 ul li {
     width: 50%;
 }
 
-ul li a {
-    margin: 0;
+ul {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
- 
+a {
+    text-align: center;
+    display: block;
+    text-decoration: none;
+}
+
+.my-tab>li>a {
+    padding: 30px 0;
+}
+
+.my-tab li {
+    margin-bottom: -2px;
+    
+}
+.my-tab>li:hover {
+    background-color: #d8d8d8;
+}
+
+.my-tab li a {
+    margin: 0;
+    color: black;
+}
+
+.my-tab {
+    background-color: #d8d8d8;
+}
+.my-tab {
+    border: 0;
+}
+
+.my-tab>li.active>a {
+    border: 0;
+}
+
+.my-tab>li.active>a:active {
+    border: 0;   
+}
+
+.my-tab>li.active>a:hover {
+    border: 0;
+}
+.my-tab>li.active>a:focus {
+    border: 0;
+}
+
+
 #remind {
     display: none;
 }
 
+
+input[type=checkbox]:checked {
+    background-color: red;
+}
