--- a/formularz-colorissimo/css/style.css
+++ b/formularz-colorissimo/css/style.css
@@ -35,6 +35,7 @@ h2 {
 box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.07);
 }
 
+
 #colorissimo-logo {
    height: 80px;
    margin: 0 auto;
@@ -121,6 +122,15 @@ ul li {
 ul {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    
+}
+
+ul>li:first-of-type a {
+     border-top-right-radius: 0;
+}
+
+ul>li:last-of-type a {
+     border-top-left-radius: 0;
 }
 
 a {
@@ -130,7 +140,7 @@ a {
 }
 
 .my-tab>li>a {
-    padding: 30px 0;
+    padding: 15px 0;
 }
 
 .my-tab li {
@@ -174,6 +184,3 @@ a {
 }
 
 
-input[type=checkbox]:checked {
-    background-color: red;
-}
