--- a/formularz-colorissimo/css/style.css
+++ b/formularz-colorissimo/css/style.css
@@ -1,15 +1,24 @@
 body {
     background-color: #f3f3f3;
+    display: flex;
+    min-height: 100vh;
+    position: relative;
+    align-items: center;
+    padding: 30px 0px;
+    justify-content: center;
+    font-family: 'Lato', sans-serif;
     
 }
 
 .container {
      max-width: 450px;
+    width: 100%;
 }
 
 h2 {
     margin-top: 0px;
 }
+/*
 #container {
     display: flex;
     min-height: 100vh;
@@ -17,6 +26,7 @@ h2 {
     align-items: center;
     padding: 30px 0px;
 }
+*/
 
 #main-container {
     display: block;
@@ -36,7 +46,7 @@ box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.07);
 }
 
 
-#colorissimo-logo {
+#logo {
    height: 80px;
    margin: 0 auto;
    display: block;
@@ -92,12 +102,18 @@ form {
 #link-remind {
     font-size: 12px;
     color: #457db9;
-    margin: 15px 0;
+    text-align: center
+/*    display: inline-block;*/
+
 }
 
 ul li {
-    width: 50%;
+    width: 33%;
 }
+ul>li:last-child {
+    display: none;
+}
+
 
 ul {
     border-top-left-radius: 5px;
@@ -133,15 +149,16 @@ a {
 
 .my-tab li a {
     margin: 0;
-    color: black;
+    color: white;
+    background-color: transparent;
 }
 
 .my-tab {
-    background-color: #d8d8d8;
-}
-.my-tab {
+    background-color: #519c96;
+    color: #fff;
     border: 0;
 }
+
 
 .my-tab>li.active>a {
     border: 0;
@@ -158,6 +175,12 @@ a {
     border: 0;
 }
 
+.nav>li>a:focus, .nav>li>a:hover {
+    background-color: transparent;
+}
+.my-tab>li:hover {
+    background-color: transparent;
+}
 
 #remind {
     display: none;
