--- a/formularz-colorissimo/css/style.css
+++ b/formularz-colorissimo/css/style.css
@@ -5,13 +5,14 @@ body {
     align-items: center;
     justify-content: center;
     font-family: 'Lato', sans-serif;
+   
 }
 
 
 #auth-container {
     max-width: 450px;
     width: 100%;
-    margin: 30px 0; 
+    margin: 60px 0; 
 }
 
 #auth-container h2 {
@@ -38,7 +39,7 @@ body {
 }
 
 #auth-container input {
-    box-shadow: none;``
+    box-shadow: none;
 }
 
 #check1 label,
