--- a/formularz-colorissimo/css/style.css
+++ b/formularz-colorissimo/css/style.css
@@ -5,6 +5,7 @@ body {
     align-items: center;
     justify-content: center;
     font-family: 'Lato', sans-serif;
+
    
 }
 
@@ -12,7 +13,8 @@ body {
 #auth-container {
     max-width: 450px;
     width: 100%;
-    margin: 60px 0; 
+    padding: 60px 0;
+
 }
 
 #auth-container h2 {
@@ -40,12 +42,6 @@ body {
 
 #auth-container input {
     box-shadow: none;
-}
-
-#check1 label,
-#check2 label,
-#check3 label {
-    font-weight: 300;
 }
 
 
@@ -112,4 +108,8 @@ body {
 
 #auth-container .nav>li:not(.active)>a {
     color: #fff;
+}
+
+#auth-container .btn-default {
+    border-color: transparent;
 }
