--- a/formularz-colorissimo/css/style.css
+++ b/formularz-colorissimo/css/style.css
@@ -6,7 +6,6 @@ body {
     justify-content: center;
     font-family: 'Lato', sans-serif;
 
-   
 }
 
 
@@ -82,6 +81,7 @@ body {
 
 #auth-container .nav-tabs>li>a {
     margin-right: 0px;
+    padding: 15px 0;
 }
 
 #auth-container .nav-tabs>li.active>a {
@@ -112,4 +112,5 @@ body {
 
 #auth-container .btn-default {
     border-color: transparent;
+    border-radius: 3px;
 }
