--- a/formularz-colorissimo/css/style.css
+++ b/formularz-colorissimo/css/style.css
@@ -32,6 +32,9 @@ body {
     background-color: #fff;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+    -moz-box-shadow: 1px 2px 4px rgba(0, 0, 0,0.1);
+    -webkit-box-shadow: 1px 2px 4px rgba(0, 0, 0, .1);
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, .1);
 }
 
  #auth-container a {
@@ -83,6 +86,7 @@ body {
     margin-right: 0px;
     padding: 20px 0;
     font-size: 18px;
+    
 }
 
 #auth-container .nav-tabs>li.active>a {
