--- a/formularz-colorissimo/css/style.css
+++ b/formularz-colorissimo/css/style.css
@@ -44,6 +44,7 @@ body {
 
 #auth-container input {
     box-shadow: none;
+    border-radius: 4px;
 }
 
 
@@ -66,7 +67,7 @@ body {
 
 
 #auth-container .form-control {
-    border-radius: 0;
+    border-radius: 3px;
     box-shadow: none;
 }
 
