--- a/dantex/css/style.css
+++ b/dantex/css/style.css
@@ -66,7 +66,8 @@ h2 {
 #content {
     background-image: url('../img/backgroun-newsletter.svg');
     background-repeat: no-repeat;
-    background-position: 90% 40%;
+    background-size: 40vh;
+    background-position: 80% 10%;
     min-height: 70vh;
     margin: 0 auto;
     display: flex;
@@ -125,6 +126,7 @@ h2 {
     font-size: 0;
     margin: 0 -15px;
     display: flex;
+    padding: 15px 0;
 }
 
 #icon figure {
@@ -136,7 +138,7 @@ h2 {
 }
 
 .icons {
-    height: 90px;
+    height: 80px;
     margin: 5vh 0 2vh;
 }
 
