--- a/dantex/css/responsive-mobile.css
+++ b/dantex/css/responsive-mobile.css
@@ -1,4 +1,4 @@
-@media (max-width:480px) {
+@media (max-width:550px) {
     body {
         overflow: scroll;
         text-align: center;
@@ -16,7 +16,7 @@
     #content {
         padding: 15px;
         height: auto;
-        background-position: 190% 5%;
+        background-image: none;
     }
 
     #content-inner #main-info p:first-child {
@@ -64,7 +64,7 @@
     }
 }
 
-@media (min-width:481px) and (max-width:760px) {
+@media (min-width:551px) and (max-width:760px) {
    
     body {
         overflow: scroll;
@@ -78,7 +78,7 @@
     #content {
         padding: 25px;
         height: auto;
-        background-position: 150% 10%;
+        background-image: none;
         text-align: center;
         
     }
