--- a/loader/css/style.css
+++ b/loader/css/style.css
@@ -1,10 +1,12 @@
 
 .sk-double-bounce {
+  display: none;
   width: 40px;
   height: 40px;
   position: relative;
   margin: 40px auto; }
   .sk-double-bounce .sk-child {
+     
     width: 100%;
     height: 100%;
     border-radius: 50%;
