--- a/formularz-colorissimo/css/style.css
+++ b/formularz-colorissimo/css/style.css
@@ -92,6 +92,7 @@ body {
     background-color: #3d5383;
     color: #fff;
     margin: 0px auto;
+    position: relative;
     
 }
 
@@ -99,3 +100,46 @@ body {
     font-size: 14px;
     color: #a7a7a7;
 }
+
+.hide-text {
+    opacity: 0;
+}
+
+
+.sk-double-bounce {
+  display: none;
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  margin: 0 auto; }
+  .sk-double-bounce .sk-child {
+     
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0.6;
+/*    position: absolute;*/
+    top: 0;
+    left: 0;
+    -webkit-animation: sk-doubleBounce 2s infinite ease-in-out;
+            animation: sk-doubleBounce 2s infinite ease-in-out; }
+  .sk-double-bounce .sk-double-bounce2 {
+    -webkit-animation-delay: -1.0s;
+            animation-delay: -1.0s; }
+
+@-webkit-keyframes sk-doubleBounce {
+  0%, 100% {
+    -webkit-transform: scale(0);
+            transform: scale(0); }
+  50% {
+    -webkit-transform: scale(1);
+            transform: scale(1); } }
+
+@keyframes sk-doubleBounce {
+  0%, 100% {
+    -webkit-transform: scale(0);
+            transform: scale(0); }
+  50% {
+    -webkit-transform: scale(1);
+            transform: scale(1); } }
